--- a/Remote.Server/Remote.Server.csproj
+++ b/Remote.Server/Remote.Server.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Serilog" Version="4.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Remote.Server.Common\Remote.Server.Common.csproj" />
   </ItemGroup>
 
