Implemented socket wrapper and improve release resourcen on close (disposing)

--- a/Remote.Core/Remote.Core.csproj
+++ b/Remote.Core/Remote.Core.csproj
@@ -17,4 +17,7 @@
     <ProjectReference Include="..\CoreHelpers\CoreHelpers.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="Tests" />
+  </ItemGroup>
 </Project>
