--- a/Remote.Core/Remote.Core.csproj
+++ b/Remote.Core/Remote.Core.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CoreHelpers\CoreHelpers.csproj" />
+    <ProjectReference Include="..\CoreImplementations\CoreImplementations.csproj" />
   </ItemGroup>
 
   <ItemGroup>
