--- a/Remote.Server/Remote.Server.csproj
+++ b/Remote.Server/Remote.Server.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CoreImplementations\CoreImplementations.csproj" />
     <ProjectReference Include="..\Remote.Server.Common\Remote.Server.Common.csproj" />
   </ItemGroup>
 
