--- a/Remote.Core/Remote.Core.csproj
+++ b/Remote.Core/Remote.Core.csproj
@@ -9,11 +9,13 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Serilog" Version="4.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Configurations.General\Configurations.General.csproj" />
     <ProjectReference Include="..\CoreHelpers\CoreHelpers.csproj" />
     <ProjectReference Include="..\CoreImplementations\CoreImplementations.csproj" />
   </ItemGroup>
