--- a/Remote.Server/Remote.Server.csproj
+++ b/Remote.Server/Remote.Server.csproj
@@ -7,10 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0" />
     <PackageReference Include="Serilog" Version="4.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Configurations.General\Configurations.General.csproj" />
     <ProjectReference Include="..\CoreImplementations\CoreImplementations.csproj" />
     <ProjectReference Include="..\Remote.Server.Common\Remote.Server.Common.csproj" />
   </ItemGroup>
