--- a/BeautifulServerApplication/appsettings.json
+++ b/BeautifulServerApplication/appsettings.json
@@ -7,6 +7,7 @@
   "AsyncServerSettings": {
     "Port": 8910,
     "MaxConnections": 10000000,
-    "IpAddress": "0.0.0.0"
+    "IpAddress": "0.0.0.0",
+    "DefaultMaxErrorCount": 1000
   }
 }
