--- a/Remote.Client.Common/Remote.Client.Common.csproj
+++ b/Remote.Client.Common/Remote.Client.Common.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+    <ProjectReference Include="..\Remote.Core\Remote.Core.csproj" />
   </ItemGroup>
 
 </Project>
