Full Project restructure to get next things to work

--- a/BeautifulServerApplication/BeautifulServerApplication.csproj
+++ b/BeautifulServerApplication/BeautifulServerApplication.csproj
@@ -20,6 +20,8 @@
     <ProjectReference Include="..\CoreHelpers\CoreHelpers.csproj" />
     <ProjectReference Include="..\Remote.Core\Remote.Core.csproj" />
     <ProjectReference Include="..\Remote.Server\Remote.Server.csproj" />
+    <ProjectReference Include="..\Session.Common\Session.Common.csproj" />
+    <ProjectReference Include="..\Session\Session.csproj" />
   </ItemGroup>
 
   <ItemGroup>
