--- a/Remote.Communication/Remote.Communication.csproj
+++ b/Remote.Communication/Remote.Communication.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="..\CoreHelpers\CoreHelpers.csproj" />
     <ProjectReference Include="..\CoreImplementations\CoreImplementations.csproj" />
     <ProjectReference Include="..\Remote.Communication.Common\Remote.Communication.Common.csproj" />
+    <ProjectReference Include="..\Session.Common\Session.Common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
