--- a/BeautifulServerApplication/BeautifulServerApplication.csproj
+++ b/BeautifulServerApplication/BeautifulServerApplication.csproj
@@ -17,11 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CoreHelpers\CoreHelpers.csproj" />
-    <ProjectReference Include="..\Remote.Core\Remote.Core.csproj" />
     <ProjectReference Include="..\Remote.Server\Remote.Server.csproj" />
     <ProjectReference Include="..\Session.Common\Session.Common.csproj" />
     <ProjectReference Include="..\Session\Session.csproj" />
+    <ProjectReference Include="..\SharedBeautifulData\SharedBeautifulData.csproj" />
   </ItemGroup>
 
   <ItemGroup>
