--- a/Session.Common/Session.Common.csproj
+++ b/Session.Common/Session.Common.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Remote.Core\Remote.Core.csproj" />
+    <ProjectReference Include="..\Remote.Communication.Common\Remote.Communication.Common.csproj" />
   </ItemGroup>
 
 </Project>
