--- a/Remote.Server.Common/Remote.Server.Common.csproj
+++ b/Remote.Server.Common/Remote.Server.Common.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
+    <OutputPath>$(SolutionDir)bin\Dlls\</OutputPath>
   </PropertyGroup>
 
 </Project>
