Added Cleitn Implementation and had to refactor and add some bit of logic
communicationservice automatically try to connect when no connection

--- a/BeautifulServerApplication/appsettings.json
+++ b/BeautifulServerApplication/appsettings.json
@@ -1,7 +1,10 @@
 ﻿{
   "AsyncClientSettings": {
     "BufferSize": 4096,
-    "ClientTimeout": 1
+    "ClientTimeout": 1,
+    "IpAddress": "0.0.0.0",
+    "Port": 8910
+
   },
 
   "AsyncServerSettings": {
