--- a/BeautifulClientApplication/BeautifulClientApplication.csproj
+++ b/BeautifulClientApplication/BeautifulClientApplication.csproj
@@ -10,4 +10,26 @@
     <OutputPath>$(SolutionDir)bin\Client\</OutputPath>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Serilog" Version="4.0.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+    <PackageReference Include="Serilog.Sinks.Map" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Remote.Communication.Common\Remote.Communication.Common.csproj" />
+    <ProjectReference Include="..\Remote.Communication\Remote.Communication.csproj" />
+    <ProjectReference Include="..\Session.Common\Session.Common.csproj" />
+    <ProjectReference Include="..\SharedBeautifulData\SharedBeautifulData.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
