Added check alive logic and tests

--- a/BeautifulClientApplication/appsettings.json
+++ b/BeautifulClientApplication/appsettings.json
@@ -4,5 +4,10 @@
     "ClientTimeout": 1,
     "IpAddress": "127.0.0.1",
     "Port": 8910
+  },
+  "CheckAliveSettings": {
+    "Enabled": true,
+    "FrequencyInSeconds": 30,
+    "Mode": 0
   }
 }
