--- a/BeautifulServerApplication/appsettings.json
+++ b/BeautifulServerApplication/appsettings.json
@@ -12,5 +12,11 @@
     "MaxConnections": 10000000,
     "IpAddress": "0.0.0.0",
     "DefaultMaxErrorCount": 1000
+  },
+
+  "CheckAliveSettings": {
+    "Enabled": true,
+    "FrequencyInSeconds": 20,
+    "Mode": 1
   }
 }
