Refactoring starting point
- removed not needed sessionfactory
- simplify session builder due correct registering of instances inside the container
- added settings to asyncclientfactory

--- a/BeautifulClientApplication/appsettings.json
+++ b/BeautifulClientApplication/appsettings.json
@@ -9,5 +9,8 @@
     "Enabled": true,
     "FrequencyInSeconds": 30,
     "Mode": 0
+  },
+  "AsyncClientFactorySettings": {
+    "AutoInit": true   
   }
 }
