--- a/BeautifulServerApplication/appsettings.json
+++ b/BeautifulServerApplication/appsettings.json
@@ -18,5 +18,9 @@
     "Enabled": true,
     "FrequencyInSeconds": 20,
     "Mode": 1
+  },
+
+  "AsyncClientFactorySettings": {
+    "AutoInit": false
   }
 }
