Added reconnect behaviour and stopping does every service on its own, when he gets disposed

--- a/BeautifulClientApplication/appsettings.json
+++ b/BeautifulClientApplication/appsettings.json
@@ -11,6 +11,11 @@
     "Mode": 0
   },
   "AsyncClientFactorySettings": {
-    "AutoInit": true   
+    "AutoInit": true
+  },
+  "ConnectionSettings": {
+    "ReconnectActivated": true,
+    "ReconnectAttempts": 5,
+    "ReconnectDelay": 15
   }
 }
