--- a/BeautifulServerApplication/appsettings.json
+++ b/BeautifulServerApplication/appsettings.json
@@ -22,5 +22,11 @@
 
   "AsyncClientFactorySettings": {
     "AutoInit": false
+  },
+
+  "ConnectionSettings": {
+    "ReconnectActivated": false,
+    "ReconnectAttempts": 5,
+    "ReconnectDelay": 15
   }
 }
