--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,5 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+BeautifulServerApplication/appsettings.Development.json
+BeautifulClientApplication/appsettings.Development.json
