--- a/BeautifulServerApplication/appsettings.json
+++ b/BeautifulServerApplication/appsettings.json
@@ -28,5 +28,17 @@
     "ReconnectActivated": false,
     "ReconnectAttempts": 5,
     "ReconnectDelay": 15
+  },
+
+  "DbSettings": {
+    "CachingTimeInSeconds": 6000000
+  },
+
+  "DbContextSettings": {
+    "ServerAdresse": "localhost",
+    "Port": 5432,
+    "DatabaseName": "BeautifulDb",
+    "UserId": "someUserId12345",
+    "Password": "somePassword123"
   }
 }
