--- a/Session/Session.csproj
+++ b/Session/Session.csproj
@@ -22,4 +22,8 @@
     <InternalsVisibleTo Include="Tests" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
