--- a/SharedBeautifulServices/SharedBeautifulServices.csproj
+++ b/SharedBeautifulServices/SharedBeautifulServices.csproj
@@ -4,7 +4,9 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-  </PropertyGroup>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
+    <OutputPath>$(SolutionDir)bin\Dlls\</OutputPath> </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Remote.Communication.Common\Remote.Communication.Common.csproj" />
