--- a/Session/Session.csproj
+++ b/Session/Session.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DbManagement.Common\DbManagement.Common.csproj" />
+    <ProjectReference Include="..\DbManagement\DbManagement.csproj" />
     <ProjectReference Include="..\Remote.Communication\Remote.Communication.csproj" />
     <ProjectReference Include="..\Remote.Server.Common\Remote.Server.Common.csproj" />
     <ProjectReference Include="..\Session.Common\Session.Common.csproj" />
