--- a/BeautifulServerApplication/appsettings.json
+++ b/BeautifulServerApplication/appsettings.json
@@ -40,5 +40,10 @@
     "DatabaseName": "BeautifulDb",
     "UserId": "someUserId12345",
     "Password": "somePassword123"
+  },
+
+  "AuthenticationSettings": {
+    "MaxAuthAttempts": 5,
+    "AuthTimeoutInMinutes": 15
   }
 }
