Inital commit of class [todo add a test ui client]
Refactoring message objects (added new interface and extracted from base class). Now can differ between Reply, Request or classic INetworkMessage

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AutoSychronizatedMessageHandling\AutoSynchronizedMessageHandling.csproj" />
     <ProjectReference Include="..\BeautifulClientApplication\BeautifulClientApplication.csproj" />
     <ProjectReference Include="..\BeautifulServerApplication\BeautifulServerApplication.csproj" />
     <ProjectReference Include="..\Core\Core.csproj" />
