--- a/BeautifulClientApplication/appsettings.json
+++ b/BeautifulClientApplication/appsettings.json
@@ -17,5 +17,9 @@
     "ReconnectActivated": true,
     "ReconnectAttempts": 5,
     "ReconnectDelay": 15
+  },
+
+  "SessionKeySettings": {
+    "GenerateId": false
   }
 }
