--- a/BeautifulServerApplication/appsettings.json
+++ b/BeautifulServerApplication/appsettings.json
@@ -45,5 +45,9 @@
   "AuthenticationSettings": {
     "MaxAuthAttempts": 5,
     "AuthTimeoutInMinutes": 15
+  },
+
+  "SessionKeySettings": {
+    "GenerateId": true
   }
 }
