--- a/BeautifulMauiClientApplication/BeautifulMauiClientApplication/BeautifulMauiClientApplication.csproj
+++ b/BeautifulMauiClientApplication/BeautifulMauiClientApplication/BeautifulMauiClientApplication.csproj
@@ -37,7 +37,9 @@
 		<TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
 
-    <OutputPath Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">$(SolutionDir)bin\Server\</OutputPath>
+    <AppendTargetFrameworkToOutputPath Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">false</AppendTargetFrameworkToOutputPath>
+    <AppendRuntimeIdentifierToOutputPath Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">false</AppendRuntimeIdentifierToOutputPath>
+    <OutputPath Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">$(SolutionDir)\..\bin\MauiClient\</OutputPath>
 
   </PropertyGroup>
 
