Added new test page with costum control

--- a/BeautifulMauiClientApplication/BeautifulMauiClientApplication/BeautifulMauiClientApplication.csproj
+++ b/BeautifulMauiClientApplication/BeautifulMauiClientApplication/BeautifulMauiClientApplication.csproj
@@ -97,6 +97,18 @@
 	  <Compile Update="MainView.xaml.cs">
 	    <DependentUpon>MainView.xaml</DependentUpon>
 	  </Compile>
+	  <Compile Update="RandomContent1View.xaml.cs">
+	    <DependentUpon>RandomContent1View.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="RandomContent1View.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="TestView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
