Adding Configuration to Maui App

--- a/BeautifulClientApplication/BeautifulClientApplication.csproj
+++ b/BeautifulClientApplication/BeautifulClientApplication.csproj
@@ -22,8 +22,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Remote.Communication.Common\Remote.Communication.Common.csproj" />
     <ProjectReference Include="..\Remote.Communication\Remote.Communication.csproj" />
+    <ProjectReference Include="..\Session.Common\Session.Common.csproj" />
     <ProjectReference Include="..\SharedBeautifulData\SharedBeautifulData.csproj" />
-    <ProjectReference Include="..\SharedBeautifulServices.Common\SharedBeautifulServices.Common.csproj" />
     <ProjectReference Include="..\SharedBeautifulServices\SharedBeautifulServices.csproj" />
   </ItemGroup>
 
