--- a/BeautifulMauiClientApplication/BeautifulMauiClientApplication/BeautifulMauiClientApplication.csproj
+++ b/BeautifulMauiClientApplication/BeautifulMauiClientApplication/BeautifulMauiClientApplication.csproj
@@ -62,10 +62,26 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="appsettings.Development.json" />
+	  <None Remove="appsettings.json" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Include="appsettings.Development.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </EmbeddedResource>
+	  <EmbeddedResource Include="appsettings.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </EmbeddedResource>
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Maui" Version="9.0.2" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
-		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
-		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.71" />
+		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.71" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
 	</ItemGroup>
 
@@ -81,6 +97,9 @@
 	  </Reference>
 	  <Reference Include="Remote.Communication.Common">
 	    <HintPath>..\..\bin\Dlls\Remote.Communication.Common.dll</HintPath>
+	  </Reference>
+	  <Reference Include="Session.Common">
+	    <HintPath>..\..\bin\Dlls\Session.Common.dll</HintPath>
 	  </Reference>
 	  <Reference Include="SharedBeautifulData">
 	    <HintPath>..\..\bin\Dlls\SharedBeautifulData.dll</HintPath>
