--- a/BeautifulMauiClientApplication/BeautifulMauiClientApplication/BeautifulMauiClientApplication.csproj
+++ b/BeautifulMauiClientApplication/BeautifulMauiClientApplication/BeautifulMauiClientApplication.csproj
@@ -30,6 +30,8 @@
 		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
 		<ApplicationVersion>1</ApplicationVersion>
 
+    <WindowsPackageType Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">None</WindowsPackageType>
+
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">11.0</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">13.1</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
@@ -79,10 +81,14 @@
 		<PackageReference Include="CommunityToolkit.Maui" Version="9.0.2" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.71" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.71" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
+		<PackageReference Include="Serilog" Version="4.0.1" />
+		<PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+		<PackageReference Include="Serilog.Sinks.Map" Version="2.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -91,6 +97,9 @@
 	  </Reference>
 	  <Reference Include="AutoSynchronizedMessageHandling.Common">
 	    <HintPath>..\..\bin\Dlls\AutoSynchronizedMessageHandling.Common.dll</HintPath>
+	  </Reference>
+	  <Reference Include="Core">
+	    <HintPath>..\..\bin\Dlls\Core.dll</HintPath>
 	  </Reference>
 	  <Reference Include="Remote.Communication">
 	    <HintPath>..\..\bin\Dlls\Remote.Communication.dll</HintPath>
