Changing authorization process and added device ident
Automatically login on client (both)
need to differ starting and connection established
refactoring services

--- a/BeautifulServerApplication/appsettings.json
+++ b/BeautifulServerApplication/appsettings.json
@@ -44,7 +44,8 @@
 
   "AuthenticationSettings": {
     "MaxAuthAttempts": 5,
-    "AuthTimeoutInMinutes": 15
+    "AuthTimeoutInMinutes": 15,
+    "MaxReactivateAuthenticationCounter": 20,
   },
 
   "SessionKeySettings": {
