Concurrent Db Context changing occured error (todo, how to get new data from db, when they changed?)
need to make an update loop, which update every x ms the db context.

--- a/BeautifulServerApplication/appsettings.json
+++ b/BeautifulServerApplication/appsettings.json
@@ -39,7 +39,9 @@
     "Port": 5432,
     "DatabaseName": "BeautifulDb",
     "UserId": "someUserId12345",
-    "Password": "somePassword123"
+    "Password": "somePassword123",
+    "AnalyzeUpdateSet": false,
+    "UpdateDbDelayInMs": 1000
   },
 
   "AuthenticationSettings": {
