Refactoring and clean up (but still not finished)
client reads lokal cert file and authorize to server

--- a/BeautifulClientApplication/appsettings.json
+++ b/BeautifulClientApplication/appsettings.json
@@ -3,7 +3,15 @@
     "BufferSize": 4096,
     "ClientTimeout": 1,
     "IpAddress": "127.0.0.1",
-    "Port": 8910
+    "Port": 8910,
+    "IsServerClient": false,
+    "TlsSettingsObj": {
+      "CertificateRequired": true,
+      "CheckCertificateRevocation": false,
+      "LeaveInnerStreamOpen": false,
+      "CertificatePath": "anyPath",
+      "TargetHost": "anyHost"
+    }
   },
   "CheckAliveSettings": {
     "Enabled": true,
