--- a/BeautifulServerApplication/appsettings.json
+++ b/BeautifulServerApplication/appsettings.json
@@ -3,7 +3,15 @@
     "BufferSize": 4096,
     "ClientTimeout": 1,
     "IpAddress": "0.0.0.0",
-    "Port": 8910
+    "Port": 8910,
+    "IsServerClient": true,
+    "TlsSettingsObj": {
+      "CertificateRequired": true,
+      "CheckCertificateRevocation": true,
+      "LeaveInnerStreamOpen": false,
+      "CertificatePath": "anyPath",
+      "TargetHost": "anyhost"
+    },
 
   },
 
@@ -11,7 +19,13 @@
     "Port": 8910,
     "MaxConnections": 10000000,
     "IpAddress": "0.0.0.0",
-    "DefaultMaxErrorCount": 1000
+    "DefaultMaxErrorCount": 1000,
+    "TlsSettingsObj": {
+      "CertificateRequired": true,
+      "CheckCertificateRevocation": true,
+      "LeaveInnerStreamOpen": false,
+      "CertificatePath": "anyPath"
+    }
   },
 
   "CheckAliveSettings": {
