--- a/BeautifulServerApplication/BeautifulServerApplication.csproj
+++ b/BeautifulServerApplication/BeautifulServerApplication.csproj
@@ -42,7 +42,7 @@
 
   <ItemGroup>
     <None Update="appsettings.Development.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
