Refactoring Tls settings to own object

--- a/BeautifulClientApplication/appsettings.json
+++ b/BeautifulClientApplication/appsettings.json
@@ -4,15 +4,18 @@
     "ClientTimeout": 1,
     "IpAddress": "127.0.0.1",
     "Port": 8910,
-    "IsServerClient": false,
-    "TlsSettingsObj": {
-      "CertificateRequired": true,
-      "CheckCertificateRevocation": false,
-      "LeaveInnerStreamOpen": false,
-      "CertificatePath": "anyPath",
-      "TargetHost": "anyHost"
-    }
+    "IsServerClient": false
+
   },
+
+  "TlsSettings": {
+    "CertificateRequired": true,
+    "CheckCertificateRevocation": false,
+    "LeaveInnerStreamOpen": false,
+    "CertificatePath": "anyPath",
+    "TargetHost": "anyHost"
+  },
+
   "CheckAliveSettings": {
     "Enabled": true,
     "FrequencyInSeconds": 30,
