--- a/BeautifulServerApplication/appsettings.json
+++ b/BeautifulServerApplication/appsettings.json
@@ -4,28 +4,23 @@
     "ClientTimeout": 1,
     "IpAddress": "0.0.0.0",
     "Port": 8910,
-    "IsServerClient": true,
-    "TlsSettingsObj": {
-      "CertificateRequired": true,
-      "CheckCertificateRevocation": true,
-      "LeaveInnerStreamOpen": false,
-      "CertificatePath": "anyPath",
-      "TargetHost": "anyhost"
-    },
+    "IsServerClient": true
+  },
 
+  "TlsSettings": {
+    "CertificateRequired": true,
+    "CheckCertificateRevocation": true,
+    "LeaveInnerStreamOpen": false,
+    "CertificatePath": "anyPath",
+    "TargetHost": "anyhost"
   },
 
   "AsyncServerSettings": {
     "Port": 8910,
     "MaxConnections": 10000000,
     "IpAddress": "0.0.0.0",
-    "DefaultMaxErrorCount": 1000,
-    "TlsSettingsObj": {
-      "CertificateRequired": true,
-      "CheckCertificateRevocation": true,
-      "LeaveInnerStreamOpen": false,
-      "CertificatePath": "anyPath"
-    }
+    "DefaultMaxErrorCount": 1000
+    
   },
 
   "CheckAliveSettings": {
@@ -61,7 +56,7 @@
   "AuthenticationSettings": {
     "MaxAuthAttempts": 5,
     "AuthTimeoutInMinutes": 15,
-    "MaxReactivateAuthenticationCounter": 20,
+    "MaxReactivateAuthenticationCounter": 20
   },
 
   "SessionKeySettings": {
