--- a/BeautifulServerApplication/appsettings.json
+++ b/BeautifulServerApplication/appsettings.json
@@ -36,7 +36,7 @@
   "ConnectionSettings": {
     "ReconnectActivated": false,
     "ReconnectAttempts": 5,
-    "ReconnectDelay": 15
+    "ReconnectDelayInSeconds": 15
   },
 
   "DbSettings": {
