--- a/BeautifulClientApplication/appsettings.json
+++ b/BeautifulClientApplication/appsettings.json
@@ -24,10 +24,10 @@
   "AsyncClientFactorySettings": {
     "AutoInit": true
   },
-  "ConnectionSettings": {
+  "ReconnectDelayInSeconds": {
     "ReconnectActivated": true,
-    "ReconnectAttempts": 5,
-    "ReconnectDelay": 15
+    "ReconnectAttempts": 10,
+    "ReconnectDelay": 5
   },
 
   "SessionKeySettings": {
