Added synchronization mode for db context, can update local data objects by update loop

--- a/BeautifulServerApplication/appsettings.json
+++ b/BeautifulServerApplication/appsettings.json
@@ -50,7 +50,9 @@
     "UserId": "someUserId12345",
     "Password": "somePassword123",
     "AnalyzeUpdateSet": false,
-    "UpdateDbDelayInMs": 1000
+    "UpdateDbDelayInMs": 1000,
+    "UpdateChangesFromDbThreshold": 3600,
+    "DbContextSyncMode": 0
   },
 
   "AuthenticationSettings": {
