--- a/BeautifulServerApplication/BeautifulServerApplication.csproj
+++ b/BeautifulServerApplication/BeautifulServerApplication.csproj
@@ -34,6 +34,8 @@
     <ProjectReference Include="..\SharedBeautifulData\SharedBeautifulData.csproj" />
     <ProjectReference Include="..\SharedBeautifulServices.Common\SharedBeautifulServices.Common.csproj" />
     <ProjectReference Include="..\SharedBeautifulServices\SharedBeautifulServices.csproj" />
+    <ProjectReference Include="..\Users.Common\Users.Common.csproj" />
+    <ProjectReference Include="..\Users\Users.csproj" />
   </ItemGroup>
 
   <ItemGroup>
