--- a/Users/Users - Backup.csproj
+++ b/Users/Users - Backup.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -12,16 +12,11 @@
   <ItemGroup>
     <ProjectReference Include="..\DbManagement.Common\DbManagement.Common.csproj" />
     <ProjectReference Include="..\DbManagement\DbManagement.csproj" />
-    <ProjectReference Include="..\Remote.Communication\Remote.Communication.csproj" />
-    <ProjectReference Include="..\Remote.Server.Common\Remote.Server.Common.csproj" />
-    <ProjectReference Include="..\Session.Common\Session.Common.csproj" />
-    <ProjectReference Include="..\SharedBeautifulData\SharedBeautifulData.csproj" />
-    <ProjectReference Include="..\SharedBeautifulServices.Common\SharedBeautifulServices.Common.csproj" />
     <ProjectReference Include="..\Users.Common\Users.Common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <InternalsVisibleTo Include="Tests" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
