--- a/BeautifulServerApplication/appsettings.json
+++ b/BeautifulServerApplication/appsettings.json
@@ -52,7 +52,7 @@
     "AnalyzeUpdateSet": false,
     "UpdateDbDelayInMs": 1000,
     "UpdateChangesFromDbThreshold": 3600,
-    "DbContextSyncMode": 0
+    "SyncMode": 0
   },
 
   "AuthenticationSettings": {
