Changing reloading behaviour of db context and refactored
removed previous settings syncmode

--- a/BeautifulServerApplication/appsettings.json
+++ b/BeautifulServerApplication/appsettings.json
@@ -51,8 +51,7 @@
     "Password": "somePassword123",
     "AnalyzeUpdateSet": false,
     "UpdateDbDelayInMs": 1000,
-    "UpdateChangesFromDbThreshold": 3600,
-    "SyncMode": 0
+    "UpdateChangesFromDbThreshold": 3600
   },
 
   "AuthenticationSettings": {
