Make Maui Client Tls as well

--- a/BeautifulMauiClientApplication/BeautifulMauiClientApplication/appsettings.json
+++ b/BeautifulMauiClientApplication/BeautifulMauiClientApplication/appsettings.json
@@ -5,14 +5,25 @@
     "IpAddress": "127.0.0.1",
     "Port": 8910
   },
+
+  "TlsSettings": {
+    "CertificateRequired": true,
+    "CheckCertificateRevocation": false,
+    "LeaveInnerStreamOpen": false,
+    "CertificatePath": "anyPath",
+    "TargetHost": "anyHost"
+  },
+
   "CheckAliveSettings": {
     "Enabled": true,
     "FrequencyInSeconds": 30,
     "Mode": 0
   },
+
   "AsyncClientFactorySettings": {
     "AutoInit": true
   },
+
   "ConnectionSettings": {
     "ReconnectActivated": true,
     "ReconnectAttempts": 5,
