--- a/Users.Common/Users.Common.csproj
+++ b/Users.Common/Users.Common.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DbManagement.Common\DbManagement.Common.csproj" />
     <ProjectReference Include="..\SharedBeautifulData\SharedBeautifulData.csproj" />
   </ItemGroup>
 
