--- a/BeautifulFundamental.Core/BeautifulFundamental.Core.csproj
+++ b/BeautifulFundamental.Core/BeautifulFundamental.Core.csproj
@@ -6,7 +6,12 @@
     <Nullable>enable</Nullable>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
-    <OutputPath>$(SolutionDir)bin\Dlls\</OutputPath>
+    <OutputPath>$(SolutionDir)bin\Dlls\</OutputPath>    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Title>Beautiful Fundamental</Title>
+    <Copyright>Stefan Nagel</Copyright>
+    <Description>This allows you to have a full fundamental for client applications. Use this package to gain safe asynchron communication for tcp clients.
+Easily transform NetworkMessages to your specific object. Automatically reconnection bevavoir. Check alive behavior. And automatically received messages in specific given context.</Description>
+    
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,4 +24,10 @@
   <ItemGroup>
     <InternalsVisibleTo Include="Tests" />
   </ItemGroup>
+  
+    <PropertyGroup>
+      <PackageId>BeautifulFundamental.Core</PackageId>
+      <Version>1.0.0</Version>
+      <Authors>Stefan Nagel</Authors>  
+    </PropertyGroup>
 </Project>
